--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@
     body {
         @apply bg-background text-foreground;
     }
-
+    /* https://css-tricks.com/snippets/css/fluid-typography/ */
     /* h1 {
         @apply text-[calc(45px+(26-14)*((100vw-300px)/(1600-300)))] font-bold; /* 60px - 6XL*/
     /* @apply text-[calc(2rem+2vw)] font-bold; */
