--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 @layer base {
     :root {
+        /* hsl(220 50% 30%) */
+        --iky: 220 100% 50%;
         --background: 0 0% 100%;
         --foreground: 222.2 84% 4.9%;
         --card: 0 0% 100%;
